fix for collapse icon

--- a/src/app/components/lexicon-panel/text-detail/edit-detail/core-tab/core-form/core-form.component.scss
+++ b/src/app/components/lexicon-panel/text-detail/edit-detail/core-tab/core-form/core-form.component.scss
@@ -47,6 +47,17 @@
     font-size: 12px;
 }
 
+.collapse-icon {
+    position: absolute;
+    right: 4px;
+    top: -16px;
+    background: white;
+    text-align: center;
+    color: $gray-900;
+    padding: 5px 5px;
+    font-size: 16px;
+}
+
 .badge {
     font-size: 11px;
 }
